降级至 Spring Boot 2.7 + Java 8 并修复兼容性问题
- Spring Boot 3.2→2.7.18, Java 17→1.8, springdoc 2.x→1.7.0
- jakarta.* 迁移为 javax.*
- List.of/Map.of 替换为 Collections 兼容写法
- SecurityConfig 放行 /swagger-ui.html
- data.sql 使用 ON DUPLICATE KEY UPDATE 避免重复插入